k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: "kkkjjjjj"
  namespace: "agents-hhhh"
spec:
  selector:
    app: "kkkjjjjj"
  ports:
    - port: 80
      targetPort: 8000
  type: ClusterIP
